Adding localization + LandMark

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -19,6 +19,12 @@ genreAction=Action
 genreHorror=Horror
 genreScienceFiction=Science Fiction
 
+#~~~ Landmark descriptions ~~~~~~~~~~~~~~~~
+landmarkContent=Content
+landmarkFooter=Footer
+landmarkMainPage=Movies Page
+landmarkDetailPage=Movies Detail Page
+
 #~~~ Detail View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 cinemaName=Cinema Name
